logs/dag_id=kezekte_etl/run_id=manual__2024-08-01T16:14:22.328191+00:00/task_id=create_table/attempt=1.log
[2024-08-01T16:14:25.891+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-01T16:14:25.901+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: kezekte_etl.create_table manual__2024-08-01T16:14:22.328191+00:00 [queued]>
[2024-08-01T16:14:25.904+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: kezekte_etl.create_table manual__2024-08-01T16:14:22.328191+00:00 [queued]>
[2024-08-01T16:14:25.904+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-08-01T16:14:25.909+0000] {taskinstance.py:2330} INFO - Executing <Task(SQLExecuteQueryOperator): create_table> on 2024-08-01 16:14:22.328191+00:00
[2024-08-01T16:14:25.913+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=130) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-08-01T16:14:25.913+0000] {standard_task_runner.py:63} INFO - Started process 132 to run task
[2024-08-01T16:14:25.914+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'kezekte_etl', 'create_table', 'manual__2024-08-01T16:14:22.328191+00:00', '--job-id', '123', '--raw', '--subdir', 'DAGS_FOLDER/kezekte_etl.py', '--cfg-path', '/tmp/tmpg_dghn0u']
[2024-08-01T16:14:25.915+0000] {standard_task_runner.py:91} INFO - Job 123: Subtask create_table
[2024-08-01T16:14:25.933+0000] {task_command.py:426} INFO - Running <TaskInstance: kezekte_etl.create_table manual__2024-08-01T16:14:22.328191+00:00 [running]> on host cd4398d9193e
[2024-08-01T16:14:25.964+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='kezekte_etl' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-08-01T16:14:22.328191+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-01T16:14:22.328191+00:00'
[2024-08-01T16:14:25.964+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-01T16:14:25.970+0000] {sql.py:276} INFO - Executing: 
            create table if not exists raw_animals (
                id serial PRIMARY KEY,
                chip_id varchar(255),
                type varchar(255),
                nickname varchar(255),
                gender varchar(255),
                breed varchar(255),
                passport_number varchar(255),
                register_date varchar(255),
                birthday varchar(255),
                status varchar(255),
                ownership varchar(255),
                register_type varchar(255),
                tagging_location varchar(255),
                tagging_place varchar(255),
                tagging_date varchar(255),
                district_area varchar(255),
                date_vaccination varchar(255),
                date_sterilization_castration varchar(255)
                CONSTRAINT unique_passport unique (passport_number)
            )
        
[2024-08-01T16:14:25.974+0000] {base.py:84} INFO - Using connection ID 'postgresql_conn' for task execution.
[2024-08-01T16:14:25.977+0000] {base.py:84} INFO - Using connection ID 'postgresql_conn' for task execution.
[2024-08-01T16:14:25.978+0000] {sql.py:487} INFO - Running statement: 
            create table if not exists raw_animals (
                id serial PRIMARY KEY,
                chip_id varchar(255),
                type varchar(255),
                nickname varchar(255),
                gender varchar(255),
                breed varchar(255),
                passport_number varchar(255),
                register_date varchar(255),
                birthday varchar(255),
                status varchar(255),
                ownership varchar(255),
                register_type varchar(255),
                tagging_location varchar(255),
                tagging_place varchar(255),
                tagging_date varchar(255),
                district_area varchar(255),
                date_vaccination varchar(255),
                date_sterilization_castration varchar(255)
                CONSTRAINT unique_passport unique (passport_number)
            )
        , parameters: None
[2024-08-01T16:14:25.979+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-01T16:14:25.979+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 21:                 CONSTRAINT unique_passport unique (passport_...
                                                           ^

[2024-08-01T16:14:25.984+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=kezekte_etl, task_id=create_table, run_id=manual__2024-08-01T16:14:22.328191+00:00, execution_date=20240801T161422, start_date=20240801T161425, end_date=20240801T161425
[2024-08-01T16:14:25.988+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 123 for task create_table (syntax error at or near "("
LINE 21:                 CONSTRAINT unique_passport unique (passport_...
                                                           ^
; 132)
[2024-08-01T16:14:26.017+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-01T16:14:26.072+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-01T16:14:26.075+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
